20371
When you try to define a float with the value 3.4028235E38F you get "error: floating point number too large":
```java
scala> 3.4028235E38F
<console>:1: error: floating point number too large
3.4028235E38F
^
```

whereas in java everything is fine:
```java
java> 3.4028235E38F
java.lang.Float res0 = 3.4028235E38
```

you can even define it in scala with java methods:
```java
scala>  java.lang.Float.intBitsToFloat(2139095039)
res0: Float = 3.4028235E38
```
